--- a/index.html
+++ b/index.html
@@ -2,27 +2,48 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find the word</title>
+    <title>Cooper Games</title>
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Find the word</h1>
+    <h1 class="header">Find the word</h1>
     <div class="container">
       <div id="hint-container"></div>
       <div id="options-container"></div>
       <div id="user-input-section"></div>
       <div id="letter-container" class="letter-container"></div>
-      <div id="new-game-container" class="new-game-popup hide">
-        <div id="result-text"></div>
-        <button id="new-game-button">Next Word</button>
+      <div id="win-container" class="new-game-popup hide">
+        <h1>CORRECT</h1>
+        <h2>The word is <span id="chosenWord_1"></span></h2>
+        <img class="result_svg" src="happy.svg" />
+        <button id="win-button">Next Word</button>
+        <div id="next_game" class="hide">
+          <button class="button1" onclick="window.location.reload()">
+            Play Again
+          </button>
+          <button
+            class="button2"
+            onclick="window.open(`https://solaiyappans.github.io/mortgage-quiz`)"
+          >
+            Next Game
+          </button>
+        </div>
+      </div>
+      <div id="lose-container" class="new-game-popup hide">
+        <h1 style="color: #f55">INCORRECT</h1>
+        <h2>The word is <span id="chosenWord_2"></span></h2>
+        <img class="result_svg" src="sad.svg" />
+        <button id="lose-button">Next Word</button>
       </div>
     </div>
+
+    <img id="cooper_logo" src="mrcooper.svg" alt="mrcooper" />
     <!-- Script -->
     <script src="script.js"></script>
   </body>
