lose count update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <h1 class="header">Find the word</h1>
     <div class="container">
+      <p id="heart-container">❤️</p>
       <div id="hint-container"></div>
       <div id="options-container"></div>
       <div id="user-input-section"></div>
