--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="header">Find the word</h1>
+    <h1 class="header">Guess the word</h1>
     <div class="container">
       <p id="heart-container">❤️</p>
       <div id="hint-container"></div>
