--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </button>
           <button
             class="button2"
-            onclick="window.open(`https://solaiyappans.github.io/mortgage-quiz`)"
+            onclick="window.open(`https://solaiyappans.github.io/spin-the-wheel`)"
           >
             Next Game
           </button>
@@ -43,7 +43,6 @@
         <button id="lose-button">Next Word</button>
       </div>
     </div>
-
     <img id="cooper_logo" src="mrcooper.svg" alt="mrcooper" />
     <!-- Script -->
     <script src="script.js"></script>
