--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <button id="lose-button">Next Word</button>
       </div>
     </div>
+    <img id="coopergames_logo" src="coopergames.svg" alt="coopergames" />
     <img id="cooper_logo" src="mrcooper.svg" alt="mrcooper" />
     <!-- Script -->
     <script src="script.js"></script>
