--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <body>
     <h1 class="header">Guess the word</h1>
     <div class="container">
-      <p id="heart-container">❤️</p>
+      <p id="heart-container">❤️🤍</p>
       <div id="hint-container"></div>
       <div id="options-container"></div>
       <div id="user-input-section"></div>
       <div id="letter-container" class="letter-container"></div>
       <div id="win-container" class="new-game-popup hide">
         <h1>CORRECT</h1>
-        <h2>The word is <span id="chosenWord_1"></span></h2>
+        <h2>The word is "<span id="chosenWord_1"></span>"</h2>
         <img class="result_svg" src="happy.svg" />
         <button id="win-button">Next Word</button>
         <div id="next_game" class="hide">
@@ -38,7 +38,7 @@
       </div>
       <div id="lose-container" class="new-game-popup hide">
         <h1 style="color: #f55">INCORRECT</h1>
-        <h2>The word is <span id="chosenWord_2"></span></h2>
+        <h2>The word is "<span id="chosenWord_2"></span>"</h2>
         <img class="result_svg" src="sad.svg" />
         <button id="lose-button">Next Word</button>
       </div>
