--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="win-container" class="new-game-popup hide">
         <h1>CORRECT</h1>
         <h2>The word is "<span id="chosenWord_1"></span>"</h2>
-        <img class="result_svg" src="happy.svg" />
+        <img class="result_svg" src="img/happy.svg" />
         <button id="win-button">Next Word</button>
         <div id="next_game" class="hide">
           <button class="button1" onclick="window.location.reload()">
@@ -39,12 +39,18 @@
       <div id="lose-container" class="new-game-popup hide">
         <h1 style="color: #f55">INCORRECT</h1>
         <h2>The word is "<span id="chosenWord_2"></span>"</h2>
-        <img class="result_svg" src="sad.svg" />
+        <img class="result_svg" src="img/sad.svg" />
         <button id="lose-button">Next Word</button>
       </div>
     </div>
-    <img id="coopergames_logo" src="coopergames.svg" alt="coopergames" />
-    <img id="cooper_logo" src="mrcooper.svg" alt="mrcooper" />
+    <img id="coopergames_logo" src="img/coopergames.svg" alt="coopergames" />
+    <img id="cooper_logo" src="img/mrcooper.svg" alt="mrcooper" />
+
+    <audio id="winSound" src="aud/win sound 1-2.wav"></audio>
+    <audio id="gameWinSound" src="aud/round_end.wav"></audio>
+    <audio id="loseSound" src="aud/losetrumpet.mp3"></audio>
+    <audio id="heartPopSound" src="aud/buzzer.mp3"></audio>
+
     <!-- Script -->
     <script src="script.js"></script>
   </body>
