remove coin sound

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img id="coopergames_logo" src="img/coopergames.svg" alt="coopergames" />
     <img id="cooper_logo" src="img/mrcooper.svg" alt="mrcooper" />
 
-    <audio id="winSound" src="aud/win sound 1-2.wav"></audio>
+    <audio id="winSound" src="aud/smb_coin.wav"></audio>
     <audio id="gameWinSound" src="aud/round_end.wav"></audio>
     <audio id="loseSound" src="aud/losetrumpet.mp3"></audio>
     <audio id="heartPopSound" src="aud/buzzer.mp3"></audio>
