--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </button>
         <button
           class="button2"
-          onclick="window.open(`https://solaiyappans.github.io/spin-the-wheel`)"
+          onclick="window.open(`https://solaiyappans.github.io/milestone-dates`)"
         >
           Next Game
         </button>
